# Eurosatproject

./: .gitignore  CLAUDE.md  README.md  eurosat_classification.ipynb  main.py  pyproject.toml
models/custom_cnn/: best_model.pth  eurosat_cnn_final.pth
models/resnet50/: eurosat_resnet50_final.pth
notebooks/: eurosat_classification.ipynb  eurosat_resnet50.ipynb  lahore_data_acquisition.ipynb
src/: lahore_inference.py  lahore_inference_sample.py
